feat(): 0718 관리자/유저 신고페이지 유저상태 제대로 표시되게 구현(!reportResult 안쓰임) SW